--- a/app/templates/items_new.html
+++ b/app/templates/items_new.html
@@ -264,7 +264,7 @@ h2 {
 </div>
 <!-- Images -->
 <div class="mb-2" style="margin-top:-6px;">
-  <label class="form-label" style="margin-bottom:6px;">Images (up to 10)</label>
+  <label class="form-label" style="margin-bottom:6px;"></label>
 
   <div class="upload-box" onclick="document.getElementById('imgInput').click();">
       <div class="upload-icon">
