--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1066,7 +1066,7 @@ window.onpageshow = function(e){
     </a>
 
     {% if session_user %}
-      <a href="/items" class="{% if request and request.url.path.startswith('/favorites') %}is-active{% endif %}">
+      <a href="/items" class="{% if request and request.url.path.startswith('/items') %}is-active{% endif %}">
         <img class="tab-img" src="{{ url_for('static', path='images/save.png') }}" alt="fav"><span>Explore</span>
       </a>
       <a href="/bookings" class="{% if request and request.url.path.startswith('/bookings') %}is-active{% endif %}">
